2010-04-15 [pawel]	3.7.5cvs47

	* src/action.c
		Fix crasher in actions using '%f' argument
		on multiple files with external scripts which
		don't return any output.

2010-04-14 [colin]	3.7.5cvs46

	* src/mainwindow.c
		Fix hand cursor after error symbol appears

2010-04-12 [colin]	3.7.5cvs45

	* configure.ac
		Fix bug 2162, 'configure check for libetpan 
		fails with libetpan 1.0'


2010-04-09 [mones]	3.7.5cvs44

	* manual/de/glossary.xml
		Fix encoding to match main document's
		Also fixes make dist with Debian's openjade

2010-03-29 [pawel]	3.7.5cvs43

	* src/matcher_parser.h
	* src/matcher_parser_parse.y
	* src/gtk/quicksearch.c
		Disable matcher warnings when populating quicksearch
		completion lists on startup

2010-03-27 [colin]	3.7.5cvs42

	* src/gtk/quicksearch.c
		Fix double-free later in code. Optimize
		list creation

2010-03-27 [pawel]	3.7.5cvs41

	* src/compose.c
		Make sure that quote ends with new line char

2010-03-26 [pawel]	3.7.5cvs40

	* src/compose.c
	* src/compose.h
	* src/textview.c
		Fix Bug 1928 Add "reply to this address" pop menu 
		             on Message View
		- Set composing account to email one when creating/replying
		  from NNTP folder by clicking link or choosing option
		  from popup menu
		- Factorize code

2010-03-25 [paul]	3.7.5cvs39

	* src/gtk/gtkcmclist.c
		Fix build with GTK+ 2.20

2010-03-24 [pawel]	3.7.5cvs38

	* src/addr_compl.c
	* src/compose.c
	* src/folderview.c
	* src/grouplistdialog.c
	* src/headerview.c
	* src/mainwindow.c
	* src/mimeview.c
	* src/prefs_account.c
	* src/gtk/gtkcmclist.c
	* src/gtk/gtkcmctree.c
	* src/gtk/gtkcmoptionmenu.c
	* src/gtk/gtksctree.c
	* src/gtk/gtkshruler.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/gtk/gtkvscrollbutton.c
	* src/gtk/inputdialog.c
	* src/gtk/spell_entry.c
	* src/plugins/trayicon/trayicon.c
	* src/plugins/trayicon/libeggtrayicon/Makefile.am
	* src/plugins/trayicon/libeggtrayicon/eggtrayicon.c
	* src/plugins/trayicon/libeggtrayicon/gtkplugxembed.c